# ElTrazadoDeRayos

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
src/lib/: CMakeLists.txt  Color.cpp  Color.h  Constants.cpp  Constants.h  FunctionTraits.h  Image.cpp  Image.h  IntersectionInfo.h  PropertyManager.cpp  PropertyManager.h  Ray.cpp  Ray.h  RayInfo.h  Scene.cpp  Scene.h  Singleton.h  Solver.h  Spatial.cpp  Spatial.h
src/lib/accelerationstructures/: AABB.cpp  AABB.h  AbstractDataStructure.h  KDTree.cpp  KDTree.h  UniformGrid.h  VectorDataStructure.cpp  VectorDataStructure.h
src/lib/cameras/: Camera.cpp  Camera.h  OrthogonalCamera.cpp  OrthogonalCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
src/lib/factories/: PropertyInterface.h
src/lib/lights/: AreaLight.cpp  AreaLight.h  AreaShape.cpp  AreaShape.h  DirectionalLight.h  Light.cpp  Light.h  PointLight.h
src/lib/materials/: BRDF.h  ColorMaterial.h  CorresponderFunctions.h  DoubleMaterial.cpp  DoubleMaterial.h  GlassMaterial.cpp  GlassMaterial.h  Material.cpp  Material.h  MonteCarloMaterial.cpp  MonteCarloMaterial.h  PhongBRDF.cpp  PhongBRDF.h  PhongMaterial.cpp  PhongMaterial.h  ShadowMaterial.cpp  ShadowMaterial.h
src/lib/parser/: ObjParser.cpp  ObjParser.h  Reflection.h  SceneFileParser.cpp  SceneFileParser.h
src/lib/postprocessors/: GammaCorrector.cpp  GammaCorrector.h  ImageNormalizer.cpp  ImageNormalizer.h  PostProcessor.cpp  PostProcessor.h
src/lib/samplers/: AdaptiveSampler.cpp  AdaptiveSampler.h  JitteredSampler.cpp  JitteredSampler.h  RegularSampler.cpp  RegularSampler.h  Sampler.cpp  Sampler.h
src/lib/shapes/: Box.cpp  Box.h  CompoundShape.cpp  CompoundShape.h  Ellipsoid.cpp  Ellipsoid.h  Mesh.cpp  Mesh.h  Plane.cpp  Plane.h  ProjectorFunctions.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  Triangle.cpp  Triangle.h
(+164 files in other folders)
